Small just-in-time additions

--- a/source/notebooks/lecture03_intro_python_in_ipynb.ipynb
+++ b/source/notebooks/lecture03_intro_python_in_ipynb.ipynb
@@ -37,37 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Zen of Python, by Tim Peters\n",
-      "\n",
-      "Beautiful is better than ugly.\n",
-      "Explicit is better than implicit.\n",
-      "Simple is better than complex.\n",
-      "Complex is better than complicated.\n",
-      "Flat is better than nested.\n",
-      "Sparse is better than dense.\n",
-      "Readability counts.\n",
-      "Special cases aren't special enough to break the rules.\n",
-      "Although practicality beats purity.\n",
-      "Errors should never pass silently.\n",
-      "Unless explicitly silenced.\n",
-      "In the face of ambiguity, refuse the temptation to guess.\n",
-      "There should be one-- and preferably only one --obvious way to do it.\n",
-      "Although that way may not be obvious at first unless you're Dutch.\n",
-      "Now is better than never.\n",
-      "Although never is often better than *right* now.\n",
-      "If the implementation is hard to explain, it's a bad idea.\n",
-      "If the implementation is easy to explain, it may be a good idea.\n",
-      "Namespaces are one honking great idea -- let's do more of those!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import this"
    ]
@@ -101,20 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "2+2"
    ]
@@ -130,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,17 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result_1 = 1 * 2\n",
     "print(result_1)\n",
@@ -175,25 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In is type <class 'list'> and In = ['', 'import this', '2+2', '1*2\\n3*4', '1*2\\nresult_2 = 3*4', '1*2\\nresult_2 = 3*4', 'result_1 = 1 * 2\\nprint(result_1)\\nresult_2 = 3 * 4', 'print(\"In is type {} and In = {}\\\\n\".format(type(In), In))\\nprint(\"The third input was \\'{}\\'\\\\n\".format(In[3]))\\nprint(\"Out is type {} and Out = {}\".format(type(Out), Out))', 'print(\"In is type {} and In = {}\\\\n\".format(type(In), In))\\nprint(\"The third input was \\'{}\\'\\\\n\".format(In[3]))\\nprint(\\'The third input was \"{}\"\\\\n\\'.format(In[3]))\\nprint(\"Out is type {} and Out = {}\".format(type(Out), Out))']\n",
-      "\n",
-      "The third input was '1*2\n",
-      "3*4'\n",
-      "\n",
-      "The third input was \"1*2\n",
-      "3*4\"\n",
-      "\n",
-      "Out is type <class 'dict'> and Out = {2: 4, 3: 12}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"In is type {} and In = {}\\n\".format(type(In), In))\n",
     "print(\"The third input was '{}'\\n\".format(In[3]))\n",
@@ -211,9 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "var_1 = 'che_696-001'\n",
@@ -226,21 +161,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike other languages (like C++ and FORTRAN), the variable type can be changed."
+    "Unlike other languages (like C++ and FORTRAN), the variable type of object assigned to the variable can be changed. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "var_1 = 8\n",
     "var_2 = 4.2\n",
     "var_3 = 'python is great'\n",
     "print(type(var_1), type(var_2), type(var_3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In python, variables are pointers. They can first point to a string, and then point to a integer, and then to something else. We'll come back to this point at times you may not get the behavior you expect if your mental model is \"var_2 is 4\" versus \"right now, var_2 points to 4\". For example, think about what the output will be from the following statements:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [1, 2, 3]\n",
+    "y = x  # now x and y point to the same object, a list\n",
+    "print(\"x =\", x, \"and y =\", y)\n",
+    "x[0] = 4\n",
+    "print(\"x =\", x, \"and y =\", y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Right now, `x` and `y` point to the same object. That can be changed!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 4\n",
+    "print(\"x =\", x, \"and y =\", y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*FYI:* When I call `type` I get the type of the object the variable name points to at that moment. "
    ]
   }
  ],
