Added more on data types

--- a/source/notebooks/lecture03_intro_python_in_ipynb.ipynb
+++ b/source/notebooks/lecture03_intro_python_in_ipynb.ipynb
@@ -38,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import this"
@@ -74,7 +76,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "2+2"
@@ -92,7 +96,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "1*2\n",
@@ -109,7 +115,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "result_1 = 1 * 2\n",
@@ -129,7 +137,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"In is type {} and In = {}\\n\".format(type(In), In))\n",
@@ -211,6 +221,56 @@
    "source": [
     "x = 4\n",
     "print(\"x =\", x, \"and y =\", y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1, 2, 3]\n",
+    "b = a\n",
+    "a = [4, 2, 3]\n",
+    "print(\"a =\", a, \"and b =\", b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = [1, 2, 3]\n",
+    "d = c\n",
+    "c.append(4)\n",
+    "print(\"c =\", c, \"and d =\", d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e = [1, 2, 3]\n",
+    "f = e.copy()\n",
+    "e[-1] = 4\n",
+    "print(\"e =\", e, \"and f =\", f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_num = 3.14\n",
+    "g = a_num\n",
+    "h = a_num\n",
+    "print(\"g =\", g, \"and h =\", h)\n",
+    "a_num = 4\n",
+    "print(\"g =\", g, \"and h =\", h)"
    ]
   },
   {
