--- a/source/notebooks/lecture04_python_data_types.ipynb
+++ b/source/notebooks/lecture04_python_data_types.ipynb
@@ -148,6 +148,10 @@
     "x -= 1  # same as x = x - 1.\n",
     "print(\"x =\", x, type(x))\n",
     "x *= 3  # same as x = x * 3.\n",
+    "print(\"x =\", x, type(x))\n",
+    "x /= 3  # same as x = x * 3.\n",
+    "print(\"x =\", x, type(x))\n",
+    "x != 3  # same as x = x * 3.\n",
     "print(\"x =\", x, type(x))"
    ]
   },
@@ -161,7 +165,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "my_favorite_number = 8\n",
@@ -282,7 +288,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = 4\n",
@@ -436,7 +444,8 @@
    },
    "outputs": [],
    "source": [
-    "not_a_list = (4.3, 5.2, 8, 2, 10)\n",
+    "not_a_list = ([4.3, 5.2, 8,\n",
+    "               2, 10], [3])\n",
     "print(type(not_a_list))"
    ]
   },
