Small additions during class

--- a/source/notebooks/lecture05_python_data_types_cont.ipynb
+++ b/source/notebooks/lecture05_python_data_types_cont.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -69,33 +69,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a == b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a is b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a is not b"
    ]
@@ -109,9 +136,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b is a: True\n",
+      "c is a: False\n",
+      "d is e: True\n",
+      "e is d: False\n",
+      "d is e: False\n",
+      "d == e: True\n",
+      "d is e: True\n"
+     ]
+    }
+   ],
    "source": [
     "a = [1, 2, 3]\n",
     "b = a\n",
@@ -122,6 +163,11 @@
     "e = 4\n",
     "print(\"d is e:\", d is e)\n",
     "e = 4.0\n",
+    "print(\"e is d:\", e is d)\n",
+    "d = 4.0\n",
+    "print(\"d is e:\", d is e)\n",
+    "print(\"d == e:\", d == e)\n",
+    "d = e\n",
     "print(\"d is e:\", d is e)"
    ]
   },
@@ -147,22 +193,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "1 in [1, 2, 3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "2 not in [1, 2, 3]"
    ]
@@ -185,14 +249,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'> <class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "message = \"what do you like?\"\n",
-    "response = 'spam'"
+    "response = 'spam'\n",
+    "print(type(message), type(response))"
    ]
   },
   {
@@ -206,9 +277,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length and type of 'a_list' are: 3 and <class 'list'>\n",
+      "Length and type of 'question' are: 17 and <class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "a_list = [1, 2, 3]\n",
     "b_list = [4, 5]\n",
@@ -227,9 +307,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'a_list' + 'b_list' yields: [1, 2, 3, 4, 5]\n",
+      "'question' + ' ' + 'response' yields: what do you like? spam\n"
+     ]
+    }
+   ],
    "source": [
     "c_list = a_list + b_list\n",
     "q_and_a = question + ' ' + response\n",
@@ -246,9 +335,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4]\n",
+      "at\n"
+     ]
+    }
+   ],
    "source": [
     "print(c_list[2:4])\n",
     "print(q_and_a[2:4])"
@@ -275,9 +373,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is '2' in c_list?  is 'at'? True False\n",
+      "Is '2' in q_and_a? is 'at'? False True\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Is '2' in c_list?  is 'at'?\", 2 in c_list, 'at' in c_list)\n",
     "# One difference: you can look for anything in a list, but only strings in strings\n",
@@ -295,9 +402,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 1, 2, 3, 1, 2, 3]\n",
+      "spamspamspam\n"
+     ]
+    }
+   ],
    "source": [
     "print(a_list * 3)\n",
     "print(response * 3)"
@@ -314,20 +430,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SPAM\n",
+      "What do you like? spam\n",
+      "what do you like? tofu\n",
+      "spam what do you like? tofu\n"
+     ]
+    }
+   ],
    "source": [
     "print(response.upper())\n",
     "print(q_and_a.capitalize())\n",
-    "print(q_and_a.replace('spam', \"tofu\"))"
+    "q_and_a = q_and_a.replace('spam', \"tofu\")\n",
+    "print(q_and_a)\n",
+    "print(response, q_and_a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['what', 'do', 'you', 'like?', 'tofu'] <class 'list'>\n"
+     ]
+    }
+   ],
    "source": [
     "q_a_split = q_and_a.split()\n",
     "print(q_a_split, type(q_a_split))"
@@ -335,9 +472,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['what do you like', ' tofu']\n"
+     ]
+    }
+   ],
    "source": [
     "q_a_split_alt = q_and_a.split(\"?\")\n",
     "print(q_a_split_alt)"
@@ -352,9 +497,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['what do you like', 'tofu']\n"
+     ]
+    }
+   ],
    "source": [
     "q_a_split_alt[1] = q_a_split_alt[1].strip()\n",
     "print(q_a_split_alt)"
@@ -364,7 +517,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are [many more built-in operations for strings](https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str) (and [also this link](https://docs.python.org/3/library/string.html)) that you are not responsible for knowing for this class. One that you are you have already seen: the `format` method!"
+    "There are [many more built-in operations for strings](https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str) (and [also this link](https://docs.python.org/3/library/string.html)) that you are not responsible for knowing for this class. One that you are you have already seen: the `format` method!\n",
+    "\n",
+    "You can also use regular expressions to give you much more functionality. You'll need to import the [re library](https://docs.python.org/3/library/re.html):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import re"
    ]
   },
   {
@@ -378,22 +544,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "0.1 + 0.2 == 0.3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1 = 0.10000000000000001\n",
+      "0.2 = 0.20000000000000001\n",
+      "0.3 = 0.29999999999999999\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"0.1 = {0:.17f}\".format(0.1))\n",
     "print(\"0.2 = {0:.17f}\".format(0.2))\n",
@@ -422,9 +605,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.30000000000000004 False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -444,9 +636,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.30000000000000004 0.3\n",
+      "a = 0.30000000000000004\n",
+      "a = 0.30000000000000004, b = 0.3\n",
+      "a = 0.30000000000000004, b = 0.3, a = 0.30000000000000004\n"
+     ]
+    }
+   ],
    "source": [
     "a = 0.1 + 0.2\n",
     "b = 0.3\n",
@@ -458,11 +661,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a =     0.30, b =     0.30\n",
+      "a = 3.00e-01, b = 3.00e-01\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"a = {:2.2f}, b = {:2.2f}\".format(a, b))\n",
+    "print(\"a = {:8.2f}, b = {:8.2f}\".format(a, b))\n",
     "print(\"a = {:2.2e}, b = {:2.2e}\".format(a, b))"
    ]
   },
@@ -477,9 +689,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'NoneType'>\n"
+     ]
+    }
+   ],
    "source": [
     "var = None\n",
     "if 2 > 4:\n",
@@ -496,13 +716,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(bool(var))\n",
     "print(bool(0))\n",
-    "print(bool(2018))\n",
+    "print(bool(2018))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
     "print(bool(a_list))\n",
     "print(bool(q_and_a))\n",
     "print(bool(\"\"))\n",
@@ -518,9 +767,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None <class 'NoneType'>\n",
+      "[1, 2, 3] <class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# First, let's remind ourselves about these variables\n",
+    "print(var, type(var))\n",
+    "print(a_list, type(a_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "var = NCRC\n",
+      "a_list = Dow\n"
+     ]
+    }
+   ],
    "source": [
     "if var:\n",
     "    var = \"Dow\"\n",
@@ -572,9 +850,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 5, 7} len = 4\n",
+      "{1, 3, 5, 7, 9} len = 5\n"
+     ]
+    }
+   ],
    "source": [
     "primes = {7, 3, 2, 5, 7}\n",
     "print(primes, \"len =\", len(primes))\n",
@@ -584,9 +871,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "{1, 2, 3, 5, 7, 9}\n"
+     ]
+    }
+   ],
    "source": [
     "# there are two ways of specifying a union\n",
     "p_o_union = primes | odds\n",
@@ -596,9 +892,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "{3, 5, 7}\n"
+     ]
+    }
+   ],
    "source": [
     "# and there are two ways of specifying an intersection\n",
     "p_o_inter = primes & odds\n",
@@ -626,9 +931,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'avinav': 'Avin', 'chechung': 'Carolina', 'minjcha': ' Minjeong'}\n"
+     ]
+    }
+   ],
    "source": [
     "classmates = {'avinav': 'Avin',\n",
     "             'chechung': 'Carolina',\n",
@@ -639,9 +952,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['avinav', 'chechung', 'minjcha', 'lyrivera'])\n",
+      "dict_values(['Avin', 'Carolina', ' Minjeong', 'Luis'])\n",
+      "Avin\n"
+     ]
+    }
+   ],
    "source": [
     "# How to add items to your dictionary\n",
     "classmates['lyrivera'] = 'Luis'\n",
@@ -650,6 +973,23 @@
     "print(classmates.values())\n",
     "# like so:\n",
     "print(classmates['avinav'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Avin' in classmates.values())"
    ]
   },
   {
@@ -663,9 +1003,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Biomed\n"
+     ]
+    }
+   ],
    "source": [
     "che_696 = {'avinav': {'first': 'Avin', 'last': 'Vijay', 'program': 'ChE'},\n",
     "          'chechung': {'first': 'Carolina', 'last': 'Chung', 'program': 'Biomed'},\n",
@@ -691,7 +1039,20 @@
     "There is a built-in [collections module](https://docs.python.org/3/library/collections.html) that has even more types. Two I've found useful:\n",
     "\n",
     "- ``collections.defaultdict``: Like a dictionary, but unspecified keys have a user-specified default value\n",
-    "- ``collections.OrderedDict``: Like a dictionary, but the order of keys is maintained\n"
+    "- ``collections.OrderedDict``: Like a dictionary, but the order of keys is maintained"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import collections\n",
+    "\n",
+    "ordered_class = collections.OrderedDict"
    ]
   },
   {
